test(point): test redis-driven point service