@@ -4,7 +4,7 @@ import org.springframework.http.HttpStatus;
 
 public class InsufficientPointBalanceException extends PointBasicException {
     public InsufficientPointBalanceException(Long balance, Long amount) {
-        super(String.format("Insufficient point balance - balance: %d, amount: %d", balance, amount),
+        super("Insufficient point balance - balance: %d, amount: %d".formatted(balance, amount),
                 HttpStatus.BAD_REQUEST);
     }
 
